--- a/.eslintrc
+++ b/.eslintrc
@@ -40,6 +40,10 @@
         "object-curly-spacing": [
             "error",
             "always"
+        ],
+        "indent": [
+            "error",
+            4
         ]
     }
 }
