--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "telegraf": "^4.7.0",
+    "@grammyjs/menu": "^1.1.1",
+    "grammy": "^1.8.2",
+    "grammy-inline-menu": "^7.0.2",
     "undici": "^5.0.0"
   }
 }
